# NFDI4CatDemoApp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: Unittest.yml  Unittest_Windows.yml
src/NFNI4CatDemoApp/Exceptions/: InformationException.py
src/NFNI4CatDemoApp/ontologies/: SimpleReaction.py
test/: test_reactions.py  test_triplestore.py
test/triplestores/: alanin_transaminase.txt  aspartate_transaminase.txt  cysteine_transaminase.txt
