[project]
name= "NFDI3CatDemoApp"
version = "0.0.1"
dependencies = [
    "owlready2",
    "rdflib"
]

[tool.ruff]
line-length = 127
target-version = "py310"

[tool.ruff.lint]
# Enables Flake8 (F) and pycodestyle (E) rules by default
select = ["E4", "E7", "E9", "F"]
ignore = ["F403", "F405"]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
